# jobscraper

./: .gitignore  README.md  pyproject.toml
data/staging/: data_nofluffjobs_data_engineer.json  data_nofluffjobs_machine_learning_engineer.json  data_pracujpl_machine_learning_engineer.json
data/transformed/: cpy.json  data_nofluffjobs_data_engineer.json  data_nofluffjobs_data_engineer_b2b.json  data_nofluffjobs_data_engineer_employment.json  data_nofluffjobs_machine_learning_engineer.json  data_nofluffjobs_machine_learning_engineer_b2b.json  data_nofluffjobs_machine_learning_engineer_employment.json  data_pracujpl_machine_learning_engineer.json
docs/: analysis.ipynb  report.md
jobscraper/: __main__.py
jobscraper/site/: base.py  nofluffjobs.py  pracujpljobs.py
jobscraper/utils/: imports.py  web.py
