[tool.poetry]
name = "jobscraper"
version = "0.1.0"
description = ""
authors = ["Kacper Kedzierski <kacper.kedzierski1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
