[tool.poetry]
name = "jobscraper"
version = "0.1.0"
description = ""
authors = ["Kacper Kedzierski <kacper.kedzierski1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.0.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
